# avvy

./: .gitignore  Cargo.toml  avvy.ipr
benches/: criterion.rs
src/: buferator.rs  lib.rs  main.rs  schema.rs
src/cdr/: mod.rs
src/cdr/de/: mod.rs
src/de/: deserializer.rs  enum_visitor.rs  error.rs  identifier_sequence_visitor.rs  identifier_visitor.rs  map_access.rs  mod.rs  seq_visitor.rs  tuple_visitor.rs
tests/: ut_test.rs
